update header color

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1033,7 +1033,7 @@ ul.nav-second-level {
   color: #DFE4ED;
 }
 .nav-header .text-muted {
-  color: #8095a8 !important;
+  color: #a6b9ca !important;
 }
 .minimalize-styl-2 {
   padding: 4px 12px;
